# imageprocessing

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  compile.sh
Shaders/: color.vs  image.fs  image.vs  lightShader.fs  lightShader.vs  modelShader.fs  modelShader.vs  points.fs  points.vs  shader.fs
hooks/: pre-commit
include/: Image.h  Shader.h
src/: AABB.cpp  AABB.h  AlgoTrianglesToQuads.cpp  AlgoTrianglesToQuads.h  AlgoVertexNormals.cpp  AlgoVertexNormals.h  Algorithm.h  BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  Circle.cpp  Circle.h  Color.cpp  Color.h  Constants.h  CrossingNumberPPolygon.cpp  CrossingNumberPPolygon.h  Defs.h  FaceAttribute.h  FaceColorAttribute.h  File.cpp  File.h  HSLColor.cpp  HSLColor.h  HalfEdgeDS.cpp  HalfEdgeDS.h  IEvent.h  IObservable.h  IObserver.h  IRenderable.h  Image.cpp  Image.h  Light.cpp  Light.h  Line.cpp  Line.h  Logger.cpp  (+46 more)
test/: test.cpp
